--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,13 @@ body {
   width: 100%;
   height: 100vh;
   align-items: center;
+  justify-content: center;
 }
 
 h1 {
   color: white;
   font-size: large;
-  margin-left: 50%;
+  
 }
 
 .bjelilo{
