--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-body { 
+html {
+  scroll-behavior: smooth;
+}
 
+body { 
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .crnilo {
@@ -11,6 +15,7 @@ body {
   height: 100vh;
   align-items: center;
   justify-content: center;
+  /* scroll-behavior: smooth; */
 }
 
 h1 {
