--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 body { 
@@ -15,7 +15,8 @@ body {
   height: 100vh;
   align-items: center;
   justify-content: center;
-  /* scroll-behavior: smooth; */
+  cursor: crosshair;
+  overflow: hidden;
 }
 
 h1 {
@@ -25,15 +26,14 @@ h1 {
 }
 
 .bjelilo{
-
   /* width: 100%;
   height: 100vh; */
+  background-image: url('../img/background.jpg');
   width: 100%;
   height: 100vh;
   position: absolute;
   margin: 0;
   cursor: none;
-  
 }
 
 header {
@@ -50,7 +50,7 @@ header .navigacija  {
   display: flex;
   justify-content: space-around;
   margin-left: auto;
-  padding-right: 2vw;
+  padding-right: 4vw;
 }
 
 .navigacija ul{
