--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 html {
   overflow: hidden;
+  cursor: url('../img/000000-0.01.cur'), none !important;
 }
 
 body { 
   margin: 0;
   padding: 0;
   overflow: hidden;
+  cursor: none;
 }
 
 .crnilo {
@@ -15,7 +17,6 @@ body {
   height: 100vh;
   align-items: center;
   justify-content: center;
-  cursor: crosshair;
   overflow: hidden;
 }
 
@@ -43,7 +44,7 @@ header {
 }
 
 h3 {
-  padding-left: 3vw;
+  padding-left: 5vw;
 }
 
 header .navigacija  {
@@ -60,12 +61,73 @@ header .navigacija  {
 .navigacija a {
   text-decoration: none;
   color: black;
+  cursor: url('../img/000000-0.01.cur'), none !important;
 }
 
 .navigacija a:hover{
   color: blue;
-  cursor: none;
+  cursor: url('../img/000000-0.01.cur'), none !important;
 }
+
+
+/* Plusici */
+
+.grid-container{
+  display: none;
+  grid-template-columns: auto auto;
+  grid-template-rows: 20vh 50vh;
+  row-gap: 10vh;
+  column-gap: 10vh;
+}
+
+
+/* Hover plusica */
+
+span{
+  background:#F8F8F8;
+  border: 5px solid #DFDFDF;
+  color: #717171;
+  font-size: 13px;
+  height: 150px;
+  width: 50px;
+  letter-spacing: 1px;
+  line-height: 30px;
+  position: right;
+  text-align: center;
+  text-transform: uppercase;
+  display:none;
+  transition-property: all;
+  transition-duration: 1s;
+}
+
+/* span:after{
+  content:'';
+  position:absolute;
+  bottom:-10px; 
+  width:10px;
+  height:10px;
+  border-bottom:5px solid #dfdfdf;
+  border-right:5px solid #dfdfdf;
+  background:#f8f8f8;
+  left:50%;
+  margin-left:-10px;
+  -moz-transform:rotate(45deg);
+  -webkit-transform:rotate(45deg);
+  transform:rotate(45deg);
+} */
+
+figure {
+  height: 10px;
+  width: 10px;
+  transition-property: all;
+  transition-duration: 1s;
+}
+
+figure:hover span{
+  display:block;
+  width: 100px;
+}
+
 
 
 /* Cursor Crosshair */
